--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
     <div id="growth">
         <p>공콩이의 성장기를 보고 싶다면 ⬇️ 클릭!</p>
-        <img style="border:10px ridge wheat" src="./image/콩이(1).jpg" alt="." width="400" height="230" onclick="change(this)">
+        <img style="border:10px ridge wheat" src="image/콩이(1).jpg" alt="." width="400" height="230" onclick="change(this)">
     </div>
     <div id="tema">
         <p>🧡테마를 선택하면 공콩이 사진을 볼 수 있어요!🧡</p>
