--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
     </nav>
     <div id="growth">
         <p>공콩이의 성장기를 보고 싶다면 ⬇️ 클릭!</p>
-        <img style="border:10px ridge wheat" src="image/콩이(1).jpg" alt="." width="400" height="230" onclick="change(this)">
+        <img style="border:10px ridge wheat" src="./image/콩이(1).jpg" alt="." width="400" height="230" onclick="change(this)">
     </div>
     <div id="tema">
         <p>🧡테마를 선택하면 공콩이 사진을 볼 수 있어요!🧡</p>
         <form>
-            <input type="radio" name="theme" value="image/곰돌이.jpg" onchange="drawImage()" checked> 곰돌이
-            <input type="radio" name="theme" value="image/미용실패.jpg" onchange="drawImage()"> 독수리
-            <input type="radio" name="theme" value="image/산책.jpg" onchange="drawImage()"> 산책
-            <input type="radio" name="theme" value="image/생일.jpg" onchange="drawImage()"> 생일
-            <input type="radio" name="theme" value="image/엉뚱.jpg" onchange="drawImage()"> 엉뚱
-            <input type="radio" name="theme" value="image/예쁨.jpg" onchange="drawImage()"> 예쁨
+            <input type="radio" name="theme" value="./image/곰돌이.jpg" onchange="drawImage()" checked> 곰돌이
+            <input type="radio" name="theme" value="./image/미용실패.jpg" onchange="drawImage()"> 독수리
+            <input type="radio" name="theme" value="./image/산책.jpg" onchange="drawImage()"> 산책
+            <input type="radio" name="theme" value="./image/생일.jpg" onchange="drawImage()"> 생일
+            <input type="radio" name="theme" value="./image/엉뚱.jpg" onchange="drawImage()"> 엉뚱
+            <input type="radio" name="theme" value="./image/예쁨.jpg" onchange="drawImage()"> 예쁨
         </form>
-        <img id="kongimage" src="image/곰돌이.jpg" alt="" width="400" height="230">
+        <img id="kongimage" src="./image/곰돌이.jpg" alt="" width="400" height="230">
       </div>
     <div id="info">
       <p>🐶공콩이's INFORMATION🐶</p>
