--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </form> 
     </div>
     <div id="video">
-        <video src="video.MOV" width="290" height="600" controls loop autoplay></video>
+        <video src="video.mov" width="290" height="600" controls loop autoplay></video>
     </div>
 </body>
 </html>
