--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
     </div>
     <div id="contact">
-      <p>📆공콩이와의 약속 잡기잡기📆</p>
+      <p>📆공콩이와의 약속 잡기📆</p>
       <hr>
       <h2>공콩이와의 만남을 원하시면 약속을 먼저 잡아주세요~</h2>
       <form id="appointmentForm">
